--- a/index.html
+++ b/index.html
@@ -1,59 +1,97 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
- <meta charset="UTF-8">
- <title>Employee Data Management</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Employee Time Sheet</title>
 
- <link rel="stylesheet" type="text/css" href="employee.css">
-
+    <!-- Bootstrap -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7"
+        crossorigin="anonymous">
 
 </head>
+
 <body>
- <h1>Employee Data Management</h1>
 
+    <div class="container">
 
- <center>
- <table style="width:80%" id="directory">
-     <thead>
-   <tr>
-     <th id="employee">Employee Name</th>
-     <th id="role">Role</th>
-     <th id="start">Start Date</th>
-     <th id="months-worked">Months Worked</th>
-     <th id="monthly-rate">Monthly Rate($)</th>
-     <th id="total-billed">Total Billed($)</th>
-   </tr>
-   </thead>
-      <tbody id="add-employee-row"></tbody>
- </table>
- </center>
+        <br>
 
+        <!-- Jumbotron -->
+        <div class="jumbotron">
+            <h1 class="text-center">Employee Time Sheet</h1>
+        </div>
 
- <form role="form" id="form-design">
-   <div class="form-group">
-     <label for="name-input">Employee Name</label><br>
-     <input class="form-control" id="name-input" type="text">
-   </div>
-   <div class="form-group">
-     <label for="role-input">Role</label><br>
-     <input class="form-control" id="role-input" type="text">
-   </div>
-   <div class="form-group">
-     <label for="start-date-input">Start Date</label><br>
-     <input class="form-control" id="start-date-input" type="text">
-   </div>
-   <div class="form-group">
-     <label for="monthly-rate-input">Monthly Rate</label><br>
-     <input class="form-control" id="monthly-rate-input" type="number">
-   </div>
-   <button class="btn btn-default" id="add-employee" type="submit">ADD</button>
- </form>
+        <div class="container" id="current_employee">
 
- <div id="test"></div>
+            <table class="table">
+                <thead class="thead-dark">
+                    <h2 id="tableName">Current Employees</h2>
+                    <tr>
+                        <th scope="col">Employee Name</th>
+                        <th scope="col">Role</th>
+                        <th scope="col">Start Date</th>
+                        <th scope="col">Months Worked</th>
+                        <th scope="col">Monthly Rate ($) </th>
+                        <th scope="col">Total Billed ($)</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th scope="row">1</th>
+                        <td>Mark</td>
+                        <td>Otto</td>
+                        <td>@mdo</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">2</th>
+                        <td>Jacob</td>
+                        <td>Thornton</td>
+                        <td>@fat</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">3</th>
+                        <td>Larry</td>
+                        <td>the Bird</td>
+                        <td>@twitter</td>
+                    </tr>
+                </tbody>
+            </table>
+
+        </div>
+
+        <!-- Input Form-->
+        <div class="form-group row">
+
+            <label for="name-input" class="col-2 col-form-label">Employee Name</label>
+            <div class="col-10">
+                <input class="form-control" type="text" value="Ding Dong" id="name-input">
+            </div>
+        </div>
+        <div class="form-group row">
+            <label for="role-input" class="col-2 col-form-label">Role</label>
+            <div class="col-10">
+                <input class="form-control" type="search" value="CEO" id="role-input">
+            </div>
+        </div>
+        <div class="form-group row">
+                <label for="date-input" class="col-2 col-form-label">Start Date (YYYY-MM-DD)</label>
+                <div class="col-10">
+                    <input class="form-control" type="date" value="2011-08-19" id="date-input">
+                </div>
+            </div>
+        <div class="form-group row">
+            <label for="monthly-rate-input" class="col-2 col-form-label">Monthly Rate</label>
+            <div class="col-10">
+                <input class="form-control" type="url" value="20000" id="monthly-rate-input">
+            </div>
+        </div>
+
+        <button type="submit" class="btn btn-primary">Submit</button>
+    </div>
 
 </body>
-<script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
-<script src="http://momentjs.com/downloads/moment.js"></script>
-<script src="https://code.jquery.com/jquery-2.2.3.js"></script>
-<script src="employee.js"></script>
+
 </html>
