--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
         <!-- Input Form-->
         <div class="form-group row">
-
+            <h2>Add Employee</h2>
             <label for="name-input" class="col-2 col-form-label">Employee Name</label>
             <div class="col-10">
                 <input class="form-control" type="text" value="Ding Dong" id="name-input">
@@ -77,11 +77,11 @@
             </div>
         </div>
         <div class="form-group row">
-                <label for="date-input" class="col-2 col-form-label">Start Date (YYYY-MM-DD)</label>
-                <div class="col-10">
-                    <input class="form-control" type="date" value="2011-08-19" id="date-input">
-                </div>
+            <label for="date-input" class="col-2 col-form-label">Start Date (YYYY-MM-DD)</label>
+            <div class="col-10">
+                <input class="form-control" type="date" value="2011-08-19" id="date-input">
             </div>
+        </div>
         <div class="form-group row">
             <label for="monthly-rate-input" class="col-2 col-form-label">Monthly Rate</label>
             <div class="col-10">
