--- a/index.html
+++ b/index.html
@@ -40,22 +40,12 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <th scope="row">1</th>
-                        <td>Mark</td>
-                        <td>Otto</td>
-                        <td>@mdo</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">2</th>
-                        <td>Jacob</td>
-                        <td>Thornton</td>
-                        <td>@fat</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">3</th>
-                        <td>Larry</td>
-                        <td>the Bird</td>
-                        <td>@twitter</td>
+                        <th scope="row">Name</th>
+                        <td>Role</td>
+                        <td>Date</td>
+                        <td>Worked</td>
+                        <td>Rate</td>
+                        <td>Billed</td>
                     </tr>
                 </tbody>
             </table>
