--- a/index.html
+++ b/index.html
@@ -7,9 +7,17 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Employee Time Sheet</title>
 
+     <!-- jQuery -->
+  <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
+
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7"
         crossorigin="anonymous">
+
+          <!-- Firebase Reference -->
+  <script src="https://www.gstatic.com/firebasejs/4.12.0/firebase.js"></script>
+
+
 
 </head>
 
@@ -38,9 +46,9 @@
                         <th scope="col">Total Billed ($)</th>
                     </tr>
                 </thead>
-                <tbody>
+                <tbody class="tbody">
                     <tr>
-                        <th scope="row">Name</th>
+                        <td scope="row">Name</td>
                         <td>Role</td>
                         <td>Date</td>
                         <td>Worked</td>
@@ -79,9 +87,12 @@
             </div>
         </div>
 
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <button type="submit" class="btn btn-primary" id="submit">Submit</button>
     </div>
 
 </body>
+
+  <!-- JavaScript -->
+  <script src="assets/javascript/doc.js"></script>
 
 </html>
