--- a/index.html
+++ b/index.html
@@ -46,15 +46,8 @@
                         <th scope="col">Total Billed ($)</th>
                     </tr>
                 </thead>
-                <tbody class="tbody">
-                    <tr>
-                        <td scope="row">Name</td>
-                        <td>Role</td>
-                        <td>Date</td>
-                        <td>Worked</td>
-                        <td>Rate</td>
-                        <td>Billed</td>
-                    </tr>
+                <tbody>
+                    
                 </tbody>
             </table>
 
