--- a/index.html
+++ b/index.html
@@ -87,5 +87,6 @@
 
   <!-- JavaScript -->
   <script src="assets/javascript/doc.js"></script>
+  <script src="assets/javascript/moment.js"></script>
 
 </html>
